Fix section-books heading decor overflow on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2004,6 +2004,10 @@ body {
   z-index: 50;
 }
 
+.-z-10 {
+  z-index: -10;
+}
+
 .float-start {
   float: inline-start;
 }
@@ -2371,6 +2375,14 @@ body {
 
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-\[100vw\] {
+  max-width: 100vw;
+}
+
+.max-w-\[80vw\] {
+  max-width: 80vw;
 }
 
 .flex-shrink {
